--- a/Assignment1-Q2/First_model.ipynb
+++ b/Assignment1-Q2/First_model.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset= pd.read_csv('/Users/yashhere/Desktop/Startups.csv')\n",
+    "dataset= pd.read_csv('Startups.csv')\n",
     "X= dataset.iloc[:,0:3].values\n",
     "Y= dataset.iloc[:,4].values"
    ]
